--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "@/layouts/Layout.astro";
-import { CDN_URL } from "@/config";
+import { cdn } from "@/config";
 ---
 
 <Layout
@@ -21,7 +21,7 @@ import { CDN_URL } from "@/config";
     </section>
 
     <section class="about-team">
-      <img src={`${CDN_URL}/equipo/equipo-about.webp`} alt="Equipo ACIMU" />
+      <img src={`${cdn}/equipo/equipo-about.webp`} alt="Equipo ACIMU" />
     </section>
 
     <section class="mission-vision">
@@ -48,42 +48,42 @@ import { CDN_URL } from "@/config";
       <div class="grid">
         <div class="team-member">
           <img
-            src={`${CDN_URL}/equipo/lizeth_narvaez.webp`}
+            src={`${cdn}/equipo/lizeth_narvaez.webp`}
             alt="Team Member - Lizeth Narvaez"
           />
           <h3>Lizeth Narvaez</h3>
         </div>
         <div class="team-member">
           <img
-            src={`${CDN_URL}/equipo/dayana_chiguano.webp`}
+            src={`${cdn}/equipo/dayana_chiguano.webp`}
             alt="Team Member - Dayana Chiguano"
           />
           <h3>Dayana Chiguano</h3>
         </div>
         <div class="team-member">
           <img
-            src={`${CDN_URL}/equipo/tatiana_paucar.webp`}
+            src={`${cdn}/equipo/tatiana_paucar.webp`}
             alt="Team Member - Tatiana Paucar"
           />
           <h3>Tatiana Paucar</h3>
         </div>
         <div class="team-member">
           <img
-            src={`${CDN_URL}/equipo/esteban_caiza.webp`}
+            src={`${cdn}/equipo/esteban_caiza.webp`}
             alt="Team Member - Esteban Caiza"
           />
           <h3>Esteban Caiza</h3>
         </div>
         <div class="team-member">
           <img
-            src={`${CDN_URL}/equipo/byron_peralta.webp`}
+            src={`${cdn}/equipo/byron_peralta.webp`}
             alt="Team Member - Byron Peralta"
           />
           <h3>Byron Peralta</h3>
         </div>
         <div class="team-member">
           <img
-            src={`${CDN_URL}/equipo/bryan_silva.webp`}
+            src={`${cdn}/equipo/bryan_silva.webp`}
             alt="Team Member - Bryan Silva"
           />
           <h3>Bryan Silva</h3>
