--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,12 @@
 ---
 import Layout from "@/layouts/Layout.astro";
-import { CDN_URL } from "@/config";
-import { Home, Sofa, Trees, ChevronLeft, ChevronRight } from "lucide-astro";
+import { cdn } from "@/config";
 
 const slides = [
   {
     title: "",
     subtitle: "",
-    imageUrl: `${CDN_URL}/equipo.webp`,
+    imageUrl: `${cdn}/equipo.webp`,
   },
 ];
 ---
