feat: Add team data, update about page, and create team member page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from "@/layouts/Layout.astro";
-import { cdn } from "@/config";
+import Layout from '@/layouts/Layout.astro';
+import { cdn } from '@/config';
 ---
 
 <Layout
@@ -47,46 +47,58 @@ import { cdn } from "@/config";
       <h2>Nuestro Equipo</h2>
       <div class="grid">
         <div class="team-member">
-          <img
-            src={`${cdn}/equipo/lizeth_narvaez.webp`}
-            alt="Team Member - Lizeth Narvaez"
-          />
-          <h3>Lizeth Narvaez</h3>
+          <a href="/team/lizeth-narvaez">
+            <img
+              src={`${cdn}/equipo/lizeth_narvaez.webp`}
+              alt="Team Member - Lizeth Narvaez"
+            />
+            <h3>Lizeth Narvaez</h3>
+          </a>
         </div>
         <div class="team-member">
-          <img
-            src={`${cdn}/equipo/dayana_chiguano.webp`}
-            alt="Team Member - Dayana Chiguano"
-          />
-          <h3>Dayana Chiguano</h3>
+          <a href="/team/dayana-chiguano">
+            <img
+              src={`${cdn}/equipo/dayana_chiguano.webp`}
+              alt="Team Member - Dayana Chiguano"
+            />
+            <h3>Dayana Chiguano</h3>
+          </a>
         </div>
         <div class="team-member">
-          <img
-            src={`${cdn}/equipo/tatiana_paucar.webp`}
-            alt="Team Member - Tatiana Paucar"
-          />
-          <h3>Tatiana Paucar</h3>
+          <a href="/team/tatiana-paucar">
+            <img
+              src={`${cdn}/equipo/tatiana_paucar.webp`}
+              alt="Team Member - Tatiana Paucar"
+            />
+            <h3>Tatiana Paucar</h3>
+          </a>
         </div>
         <div class="team-member">
-          <img
-            src={`${cdn}/equipo/esteban_caiza.webp`}
-            alt="Team Member - Esteban Caiza"
-          />
-          <h3>Esteban Caiza</h3>
+          <a href="/team/esteban-caiza">
+            <img
+              src={`${cdn}/equipo/esteban_caiza.webp`}
+              alt="Team Member - Esteban Caiza"
+            />
+            <h3>Esteban Caiza</h3>
+          </a>
         </div>
         <div class="team-member">
-          <img
-            src={`${cdn}/equipo/byron_peralta.webp`}
-            alt="Team Member - Byron Peralta"
-          />
-          <h3>Byron Peralta</h3>
+          <a href="/team/byron-peralta">
+            <img
+              src={`${cdn}/equipo/byron_peralta.webp`}
+              alt="Team Member - Byron Peralta"
+            />
+            <h3>Byron Peralta</h3>
+          </a>
         </div>
         <div class="team-member">
-          <img
-            src={`${cdn}/equipo/bryan_silva.webp`}
-            alt="Team Member - Bryan Silva"
-          />
-          <h3>Bryan Silva</h3>
+          <a href="/">
+            <img
+              src={`${cdn}/equipo/bryan_silva.webp`}
+              alt="Team Member - Bryan Silva"
+            />
+            <h3>Bryan Silva</h3>
+          </a>
         </div>
       </div>
     </section>
