--- a/src/pages/team/[slug].astro
+++ b/src/pages/team/[slug].astro
@@ -1,4 +1,5 @@
 ---
+export const prerender = true;
 import Layout from "../../layouts/Layout.astro";
 import team from "@/data/team";
 import { Linkedin, Instagram, Globe } from "lucide-astro";
